--- a/CSS/1.html
+++ b/CSS/1.html
@@ -10,7 +10,26 @@
 
     <h1 id="id1">THis is CSS id </h1>
     <h1 class="akon">THis is css  class </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quis placeat dolorem laboriosam eveniet adipisci ea accusamus enim nam molestiae veniam sit necessitatibus provident similique, velit tempore a tenetur animi omnis aspernatur unde minus dolore dolores! Explicabo sed temporibus vel deserunt illo et facilis magni hic reiciendis. Harum quo nemo quasi, dolor eum rerum eos a sapiente quisquam sed repudiandae ipsa similique explicabo recusandae laudantium error voluptatum, sint debitis aliquam magnam corporis quod voluptas accusamus sunt? Enim impedit at id, delectus veniam consequatur, nisi molestias perferendis repellendus non, culpa dolore temporibus sed reiciendis eveniet commodi suscipit quam! Repellendus iure beatae libero voluptatum sit incidunt molestiae nostrum eum omnis optio odio commodi porro dolorum soluta culpa vel deserunt ea maxime, dolores placeat ut quos provident voluptate. Vel omnis delectus sed iste, eligendi alias, minus cumque harum dolorem reiciendis culpa perferendis esse quasi nesciunt distinctio dolor neque porro nostrum dignissimos provident, possimus sit. Corrupti, quibusdam cum. Expedita quis blanditiis possimus ipsa debitis tempore recusandae in unde repellendus tempora delectus, animi vitae amet sed! Assumenda facere, suscipit in exercitationem nulla, quo iusto voluptatem nostrum, necessitatibus veniam cum neque nemo sapiente repellendus laboriosam eveniet quidem velit incidunt. Rerum voluptatum odio quos culpa perferendis. Facilis?
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Deserunt quis placeat dolorem laboriosam eveniet adipisci
+        ea accusamus enim nam molestiae veniam sit necessitatibus provident similique, 
+        velit tempore a tenetur animi omnis aspernatur unde minus dolore dolores! 
+        Explicabo sed temporibus vel deserunt illo et facilis magni hic reiciendis.
+        Harum quo nemo quasi, dolor eum rerum eos a sapiente quisquam sed repudiandae
+        ipsa similique explicabo recusandae laudantium error voluptatum, sint debitis
+        aliquam magnam corporis quod voluptas accusamus sunt? Enim impedit at id,
+        delectus veniam consequatur, nisi molestias perferendis repellendus non, 
+        culpa dolore temporibus sed reiciendis eveniet commodi suscipit quam! Repellendus
+        iure beatae libero voluptatum sit incidunt molestiae nostrum eum omnis optio odio
+        commodi porro dolorum soluta culpa vel deserunt ea maxime, dolores placeat ut quos
+        provident voluptate. Vel omnis delectus sed iste, eligendi alias, minus cumque
+        harum dolorem reiciendis culpa perferendis esse quasi nesciunt distinctio dolor
+        neque porro nostrum dignissimos provident, possimus sit. Corrupti, quibusdam cum.
+        Expedita quis blanditiis possimus ipsa debitis tempore recusandae in unde repellendus
+        tempora delectus, animi vitae amet sed! Assumenda facere, suscipit in exercitationem
+        nulla, quo iusto voluptatem nostrum, necessitatibus veniam cum neque nemo sapiente
+        repellendus laboriosam eveniet quidem velit incidunt. Rerum voluptatum odio quos culpa perferendis. 
+        Facilis?
         
     </p>
 
