--- a/CSS/3.html
+++ b/CSS/3.html
@@ -15,6 +15,13 @@
         <div class="three">Three</div><br>
         <div class="four">Four</div>
     </div>
+    <br><br>
+    <div id="id1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas totam error 
+            excepturi modi recusandae itaque possimus animi nulla veniam 
+            ratione alias eaque accusamus beatae saepe libero inventore, 
+            cum optio minus.</p>
+    </div>
 </body>
 
 </html>
