--- a/CSS/4.html
+++ b/CSS/4.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 class="line">The 50 Best Animated Movies of All Time</h1>
+    <h1 class="line">The 10 Best Animated Movies of All Time</h1>
     <p class="line1">From <i>Inside Out 2 to Snow White and the Seven Dwarfs, </i> these top picks include classic films and modern
         animaltion</p>
     BY <u>MARISA LASCLA</u> AND <u>ADRIANNA FREEDMAN</u>
@@ -17,6 +17,7 @@
     <br>
     <br>
     <img src="img\1.avif" alt="movies">
+    <br>
     <br>
     <hr>
     <p class="line2">We've been independently researching and testing products for over 120 years. If you buy through our links, we
@@ -43,18 +44,20 @@
     <br>
     
     <div>
-        <img src="img/2.avif" alt="movies" id="img1">
+        <img src="img/2.avif" alt="movies" id="img1"> <br>
         <h1>1</h1>
         <b>Inside Out 2 (2024)</b>
+        <div>
         <p class="par">When Disney and Pixar released the sequel to the hit 2015 film, viewers were excited to see our favorite
             emotions back in action. But as they help Riley navigate becoming a teenager, they encounter some new
             emotions ... ones they certainly didn't intend on interacting with.</p>
+        </div>
     </div>
     <br>
     <br>
     <div>
-        <img src="img/3.avif" alt="" id="img2">
-        <h1>2</h1>
+        <img src="img/3.avif" alt="" id="img2"> <br>
+        <h1 class="clear-right">2</h1>
         <b>Migration (2023)</b>
         <p class="par">When Disney and Pixar released the sequel to the hit 2015 film, viewers were excited to see our favorite
             emotions back in action. But as they help Riley navigate becoming a teenager, they encounter some new
@@ -63,40 +66,40 @@
     <br>
     <br>
     <div >
-        <img src="img/4avif.avif" alt="" id="img3">
+        <img src="img/4avif.avif" alt="" id="img3"> <br>
         <h1>3</h1>
         <b>Elemental (2023)</b>
-        <p>Did you ever think you'd see a movie where the four elements of the world would come to life? Well, Disney
+        <p class="par">Did you ever think you'd see a movie where the four elements of the world would come to life? Well, Disney
             and Pixar managed to do so, telling a heartwarming story of what happens when fire and water come together
             when it seems like opposites would forever attract.</p>
     </div>
     <br>
     <br>
     <div >
-        <img src="img/5.avif" alt="" id="img4">
-        <h1>4</h1>
-        <b>The Super Mario Bros. Movie (2023)</b>
-        <p>The well-loved popular video game characters get their own animated movie, following Mario and Luigi in an
+        <img src="img/5.avif" alt="" id="img4"> <br>
+        <h1 class="clear-right">4</h1>
+        <b>The Super Mario Bros Movie (2023)</b>
+        <p class="par">The well-loved popular video game characters get their own animated movie, following Mario and Luigi in an
             origin story of how they found themselves in a fantasy world. With Princess Peach and Toad by their side,
             the duo must find a way to fight for the Mushroom Kingdom, with the evil Bowser as their enemy.</p>
     </div>
     <br>
     <br>
     <div >
-        <img src="img/6.avif" alt="" id="img5">
+        <img src="img/6.avif" alt="" id="img5"> <br>
         <h1>5</h1>
         <b>The Boy and the Heron (2023)</b>
-        <p>Based on the novel of the same name, this movie follows a boy who discovers a fantastical world with a
+        <p class="par">Based on the novel of the same name, this movie follows a boy who discovers a fantastical world with a
             talking gray heron near his home. The movie was a success among Japanese viewers upon release, and it
             eventually won the 2024 Academy Award for Best Animated Feature.</p>
     </div>
     <br>
     <br>
     <div >
-        <img src="img/7.avif" alt="" id="img6">
-        <h1>6</h1>
+        <img src="img/7.avif" alt="" id="img6"> <br>
+        <h1 class="clear-right">6</h1>
         <b>The Bad Guys</b>
-        <p>Some folks just have bad reputations, like wolves, spiders, sharks, carnivorous fish and snakes. But when a
+        <p class="par">Some folks just have bad reputations, like wolves, spiders, sharks, carnivorous fish and snakes. But when a
             group of these "Bad Guys" have to try and walk the straight and narrow, they find it feels pretty good —
             except when others can't get over their preconceived notions. Sam Rockwell gives a winning vocal performance
             as Wolf, the leader of the pack.</p>
@@ -104,40 +107,40 @@
     <br>
     <br>
     <div >
-        <img src="img/8.avif" alt="" id="img7">
+        <img src="img/8.avif" alt="" id="img7"> <br>
         <h1>7</h1>
         <b>The Sea Beast (2022)</b>
-        <p>A world-famous monster hunter and an orphan of no renown are an unlikely pair in this sea-faring adventure.
+        <p class="par">A world-famous monster hunter and an orphan of no renown are an unlikely pair in this sea-faring adventure.
             Maisie Brumble, the orphan, stows away on the ship of the famous Jacob Holland, hoping to help him destroy
             monsters. Instead, they learn that the world isn't what they expected. The movie is from the director of
             Moana, so he's had plenty of practice directing a story that traverses oceans.</p>
     </div><br>
     <br>
     <div >
-        <img src="img/9.avif" alt="" id="img8">
-        <h1>8</h1>
+        <img src="img/9.avif" alt="" id="img8"> <br>
+        <h1 class="clear-right">8</h1>
         <b>Turning Red (2022)</b>
-        <p>Throw this movie on when you're just not seeing eye-to-eye with your kids, and you'll all relate to the story
+        <p class="par">Throw this movie on when you're just not seeing eye-to-eye with your kids, and you'll all relate to the story
             of kids who find their own ways around parental expectations. Only the main character, Mei Ling, does this
             in an unusual way, since her and her mother have to find a solution to her unusual affliction: She turns
             into a giant red panda whenever she feels extreme emotions.</p>
     </div><br>
     <br>
     <div >
-        <img src="img/10.avif" alt="" id="img9">
+        <img src="img/10.avif" alt="" id="img9"> <br>
         <h1>9</h1>
         <b>Wendell & Wild (2022)</b>
-        <p>For something a little darker, there's this story, about two demons who try to trick a loner girl named Kat
+        <p class="par">For something a little darker, there's this story, about two demons who try to trick a loner girl named Kat
             into helping them return to the land of the living. The movie is a team-up of stop-motion animation master
             Henry Selick <i>(The Nightmare Before Christmas)</i> and horror icon Jordan Peele <i>(Nope)</i>i, and both of
                 their sensibilities come through in surprising ways.</p>
     </div><br>
     <br>
     <div >
-        <img src="img/11.avif" alt="" id="img10">
-        <h1>10</h1>
+        <img src="img/11.avif" alt="" id="img10"> <br>
+        <h1 class="clear-right">10</h1>
         <b>Encanto (2021)</b>
-        <p>Most Disney movies feature a princess, or a hero on an epic quest to faraway lands. Encanto turns all those
+        <p class="par">Most Disney movies feature a princess, or a hero on an epic quest to faraway lands. Encanto turns all those
             conventions on their head — Mirabel is not only not a princess, she's just a normal, not-gifted girl, and
             all the action takes place within walking distance of her house. And yet, she still gets involved in
             unraveling a mystery and learning truths about her family in unexpectedly exciting and emotionally involving
