--- a/CSS/8.html
+++ b/CSS/8.html
@@ -6,15 +6,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="8.css">
 </head>
-<body>
-    <div id="menu"></div>
-    <h1>Menu</h1>
-    <menu>
-        <li><a href="">Home</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">Email</a></li>
-    </menu>
-</div>
+<body> 
+    <br>
+    <div></div><div class="fixed">
+        Home | contact | service| About us
+        </div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos veniam nisi veritatis modi optio voluptatibus obcaecati, necessitatibus ipsum perferendis facere voluptates nemo totam assumenda, sit reiciendis illum non in nostrum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui delectus voluptas maxime iste accusamus doloribus deleniti maiores vero                          
+    tenetur ipsa laudantium labore sunt, adipisci veritatis, nemo repellat voluptatum laboriosam officiis quos voluptates et sequi nulla natus non! Autem ex id rem. Ea, at omnis! Quam corporis quisquam fugiat dolorem beatae et perspiciatis, nostrum, rem, ut nobis hic quod. Doloribus sunt non dolor eveniet nam magnam architecto itaque aperiam velit nihil temporibus suscipit, quae excepturi id totam. Debitis a consectetur iure dignissimos soluta, quaerat numquam totam illo laboriosam qui saepe accusamus animi! Ab tenetur amet, cumque asperiores harum quae facere. Modi consequuntur laboriosam reiciendis nam sint recusandae repellendus asperiores tempora. Quibusdam, similique expedita! Unde dignissimos rem velit dolor pariatur saepe labore nemo. Ipsam reiciendis animi cumque dolor! Ipsum nemo delectus corporis deleniti! Accusamus ea obcaecati sit cupiditate aperiam corrupti quis totam voluptatum, porro temporibus, ipsa, eligendi quos? Ut minima similique, earum rem numquam corporis officiis natus incidunt voluptatum, unde facilis vero delectus. Numquam, consequatur ipsum ut quod voluptate eos temporibus officiis eaque debitis voluptas et, iusto fugit qui at neque dolore assumenda sint consectetur delectus molestiae error perspiciatis vero repellat. Doloribus unde nobis alias dolor beatae maxime provident placeat! Ex eos tempore at expedita debitis distinctio quasi molestias, impedit non ab quas cupiditate velit! Repellendus asperiores odio sed iste, minus error. Eveniet labore veniam molestiae porro harum, hic officia at sed repellat quas, perspiciatis ab sunt in accusamus doloribus rem corporis quidem est magni pariatur totam officiis. Laboriosam expedita hic asperiores fuga repellendus, accusantium, deleniti non atque adipisci facilis ab eaque nulla debitis vel minima perferendis, facere voluptatibus. Optio quis expedita iusto voluptate esse culpa maxime eaque aperiam mollitia officia corporis ut reiciendis, dolorum quasi quo repellat nihil fugiat, laudantium dolor facilis dolorem. Ipsa sequi totam hic cum eos, repudiandae nam? 
+</div><br><br>
+    <div class="sticky">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos veniam nisi veritatis modi optio voluptatibus obcaecati, necessitatibus ipsum perferendis facere voluptates nemo totam assumenda, sit reiciendis illum non in nostrum?
+    </div>
+    <div class="relative">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum voluptatum laboriosam amet voluptas repudiandae. Est et dicta perferendis at iure laborum facilis dolorum, aspernatur animi, blanditiis tenetur doloremque officiis quae.
+        <div class="absolute">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quas sed quaerat eius amet ipsum vitae asperiores esse ad repudiandae.
+        </div>
+    </div>
+    top: 20px;
+  padding: 5px;
+  background-color: #cae8ca;
+  border: 2px solid #4CAF50;
+        
+    
 </body>
 </html>
