--- a/CSS/book.html
+++ b/CSS/book.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="book.css">
 </head>
 <body>
-    <div id="main">
+    <!-- <div id="main">
         <img src="book/1.avif" alt="" id="bg">
         <h1>What is a Book to a Reader?</h1>
         <p>A book is more than just printed words on pages—it's a doorway to new worlds, ideas, and emotions. To a reader, a book can be:</p>
@@ -28,14 +28,19 @@
     </div>
     <div>
         <img src="" alt="">
-    </div>
-    <button>Hover Me</button>
+    </div> -->
+    <!-- <button>Hover Me</button> -->
     <div id="menu">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Email</a></li>
+            <li><a href="4.html" target="f">Home</a></li>
+            <li><a href="5.html" target="f">Contact</a></li>
+            <li><a href="6.html" target="f">Email</a></li>
         </ul>
+
+    </div>
+    <div>
+        <iframe src="4.html" frameborder="0" name="f" height="800px"
+        width="80%"></iframe>
     </div>
 </body>
 </html>
